--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --check --ignore-path .gitignore './**/*.{ts,tsx}'",
+    "prettier:fix": "prettier --ignore-path .gitignore --write './**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@types/node": "18.15.5",
@@ -18,5 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "prettier": "2.8.6"
   }
 }
