--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals"]
+  "extends": ["eslint:recommended", "next/core-web-vitals"],
+  "env": {
+    "jest": true
+  }
 }
