--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --check --ignore-path .gitignore './**/*.{ts,tsx}'",
-    "prettier:fix": "prettier --ignore-path .gitignore --write './**/*.{ts,tsx}'"
+    "prettier:fix": "prettier --ignore-path .gitignore --write './**/*.{ts,tsx}'",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@types/node": "18.15.5",
@@ -22,6 +24,10 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.6"
   }
 }
